CMAKE_MINIMUM_REQUIRED ( VERSION 3.19 )

PROJECT (Krr-Math
	DESCRIPTION "A simple wrapper upon Eigen for rendering applications."
)

# eigen
SET(EIGEN_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/eigen)

SET(KRR_MATH_INCLUDE_DIRS
	${EIGEN_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (KRR_MATH_INCLUDE_DIRS ${KRR_MATH_INCLUDE_DIRS} PARENT_SCOPE)
INCLUDE_DIRECTORIES(${KRR_MATH_INCLUDE_DIRS})

ADD_LIBRARY(krr_math INTERFACE)

TARGET_INCLUDE_DIRECTORIES(krr_math INTERFACE
	${KRR_MATH_INCLUDE_DIRS} 
)